--- a/src/watchlist/exchange/view.pug
+++ b/src/watchlist/exchange/view.pug
@@ -3,7 +3,7 @@ tr
     image(src='../asset/btc.png', width="25", height="25")
   td 
     b
-      a(href="https://coinmarketcap.com/", target="_blank") Bitcoin
+      a(href="https://coinmarketcap.com/", target="_blank") BTC
   td
     b.text-success#exchange-usd-btc
   td -
@@ -15,7 +15,7 @@ tr
     image(src='../asset/arkt.png', width="25", height="25")
   td 
     b
-      a(href="https://masternodes.online/currencies/ARKT/", target="_blank") Arktur
+      a(href="https://masternodes.online/currencies/ARKT/", target="_blank") Arkt
   td
     b.text-success#exchange-usd-art
   td#exchange-btc-art
@@ -27,7 +27,7 @@ tr
     image(src='../asset/xgs.png', width="25", height="25")
   td 
     b
-      a(href="https://masternodes.online/currencies/XGS/", target="_blank") GenesisX
+      a(href="https://masternodes.online/currencies/XGS/", target="_blank") XGS
   td
     b.text-success#exchange-usd-xgs
   td#exchange-btc-xgs
@@ -39,7 +39,7 @@ tr
     image(src='../asset/gin.png', width="25", height="25")
   td 
     b
-      a(href="https://masternodes.online/currencies/GIN/", target="_blank") Gincoin
+      a(href="https://masternodes.online/currencies/GIN/", target="_blank") GIN
   td
     b.text-success#exchange-usd-gin
   td#exchange-btc-gin
@@ -51,7 +51,7 @@ tr
     image(src='../asset/xmn.png', width="25", height="25")
   td
     b
-      a(href="https://masternodes.online/currencies/XMN/", target="_blank") Motion
+      a(href="https://masternodes.online/currencies/XMN/", target="_blank") XMN
   td
     b.text-success#exchange-usd-xmn
   td#exchange-btc-xmn
