--- a/src/watchlist/view.pug
+++ b/src/watchlist/view.pug
@@ -19,7 +19,7 @@
               th Name
               th Price
               th Last
-              th Market Cap
+              th M.Cap
               th MN Cost
               th Reduction
             tbody#watchlist-exchange-body
@@ -37,7 +37,7 @@
               th Rewarded
               th ROI
               th Daily
-              th Frequency
+              th Freq
               th Next
               th Balance
               th Unlocked
