Shorten table header

--- a/src/watchlist/view.pug
+++ b/src/watchlist/view.pug
@@ -20,7 +20,7 @@
               th Price
               th Last
               th M.Cap
-              th MN Cost
+              th Cost
               th Reduction
             tbody#watchlist-exchange-body
     .col-lg-7
