Compact table continue

--- a/src/watchlist/summary/view.pug
+++ b/src/watchlist/summary/view.pug
@@ -12,8 +12,8 @@
               td
                 b Unlocked
               td
-                span
-                  b.text-success#summary-portfolio-excess
+                span.text-success
+                  b#summary-portfolio-excess
             tr
               td
                 b Invested
